First set-up files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
 
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
+
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<title>Frontend Mentor | Order summary card</title>
+	</head>
+
+	<body class="container">
+		<main id="my-page">
+			<section class="order-summary">
+				<div class="order-summary__holder">
+					<div class="order-summary__image-container">
+						<img alt="" aria-hidden="true" src="img/illustration-hero.svg">
+					</div>
+					<div class="order-summary__content-container">
+						<h1>Order Summary</h1>
+						<p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+						<div class="annual-plan__holder">
+							<div class="annual-plan__icon">
+								<img alt="" aria-hidden="true" src="icon-music.svg">
+							</div>
+							<div class="annual-plan__prices">
+								<span class="boldText">Annual Plan</span>
+								<span>$59.99/year</span>
+							</div>
+							<div class="annual-plan__button">
+								<a href="">Change</a>
+							</div>
+						</div>
+						<div class="button button__blue">
+							<a href="">Proceed to Payment</a>
+						</div>
+						<div class="button button__faded">
+							<a href="">Cancel Order</a>
+						</div>
+					</div>
+				</div>	
+			</section>
+			<div class="attribution">
+				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    			Coded by <a href="#">Your Name Here</a>.
+    		</div>
+    	</main>
+	</body>
+</html>
