--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<title>Frontend Mentor | Order summary card</title>
 	</head>
 
-	<body class="container">
-		<main id="my-page">
+	<body>
+		<main id="my-page container">
 			<section class="order-summary">
 				<div class="order-summary__holder">
 					<div class="order-summary__image-container">
