Properly changed responsive design. I'm stupid. :))

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<main id="my-page container">
+		<main id="my-page" class="container">
 			<section class="order-summary">
 				<div class="order-summary__holder">
 					<div class="order-summary__image-container">
