--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 						<img alt="" aria-hidden="true" src="img/illustration-hero.svg">
 					</div>
 					<div class="order-summary__content-container">
-						<h1>Order Summary</h1>
-						<p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-						<div class="annual-plan__holder">
+						<h1 class="pad">Order Summary</h1>
+						<p class="pad">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+						<div class="annual-plan__holder pad">
 							<div class="annual-plan__icon">
-								<img alt="" aria-hidden="true" src="icon-music.svg">
+								<img alt="" aria-hidden="true" src="img/icon-music.svg">
 							</div>
 							<div class="annual-plan__prices">
-								<span class="boldText">Annual Plan</span>
+								<span class="planText">Annual Plan</span>
 								<span>$59.99/year</span>
 							</div>
 							<div class="annual-plan__button">
@@ -41,7 +41,7 @@
 						<div class="button button__blue">
 							<a href="">Proceed to Payment</a>
 						</div>
-						<div class="button button__faded">
+						<div class="button button__faded pad">
 							<a href="">Cancel Order</a>
 						</div>
 					</div>
