Removed pad class.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<img alt="" aria-hidden="true" src="img/illustration-hero.svg">
 					</div>
 					<div class="order-summary__content-container">
-						<h1 class="pad">Order Summary</h1>
-						<p class="pad">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-						<div class="annual-plan__holder pad">
+						<h1>Order Summary</h1>
+						<p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+						<div class="annual-plan__holder">
 							<div class="annual-plan__icon">
 								<img alt="" aria-hidden="true" src="img/icon-music.svg">
 							</div>
@@ -41,7 +41,7 @@
 						<div class="button button__blue">
 							<a href="">Proceed to Payment</a>
 						</div>
-						<div class="button button__faded pad">
+						<div class="button button__faded">
 							<a href="">Cancel Order</a>
 						</div>
 					</div>
